--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,7 @@
-# Project information
-site_name: CLRS Solutions
-site_description: Solutions to Introduction to Algorithms Third Edition. CLRS Solutions. The textbook that a Computer Science (CS) student must read.
-site_author: Peng-Yu Chen
-site_url: https://walkccc.me/CLRS
 
 # Repository
-repo_name: walkccc/CLRS
-repo_url: https://github.com/walkccc/CLRS
+repo_name: RadleyJiao/CLRS
+repo_url: https://github.com/RadleyJiao/CLRS
 
 # Copyright
 copyright: Built by <a href="http://github.com/walkccc">Peng-Yu Chen</a> &copy; 2017 - 2021
