--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,51 +1,29 @@
-
+site_name: My CLRS Solution
 # Repository
 repo_name: RadleyJiao/CLRS
 repo_url: https://github.com/RadleyJiao/CLRS
 
-# Copyright
-copyright: Built by <a href="http://github.com/walkccc">Peng-Yu Chen</a> &copy; 2017 - 2021
-
-# Configuration
 theme:
   name: material
-  language: en
-  custom_dir: custom
-  favicon: assets/favicon.png
   palette:
-    primary: teal
-    accent: blue
-  font:
-    text: Roboto
-    code: Roboto Mono
+    - scheme: default
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to dark mode
+      accent: pink
+      primary: black
+    - scheme: slate
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode
+      accent: pink
+      primary: black
   icon:
-    logo: fontawesome/solid/globe-americas
     repo: fontawesome/brands/github
-
-# Customization
-extra:
-  social:
-    - icon: fontawesome/brands/github-square
-      link: https://github.com/walkccc
-    - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/in/walkccc/
-    - icon: fontawesome/solid/code
-      link: https://walkccc.me/LeetCode
-
-extra_css:
-  - css/katex.css
-  - css/custom.css
-  - https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css
-
 extra_javascript:
-  - js/katex.js
-  - https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js
-  - https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js
-
-# Google Analytics
-google_analytics:
-  - UA-117404761-1
-  - auto
+  - javascripts/config.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 # Extensions
 markdown_extensions:
@@ -55,7 +33,11 @@ markdown_extensions:
   - toc:
       permalink: false
   - pymdownx.superfences
-
+plugins:
+  - search:
+      lang:
+        - en
+        - ja
 nav:
   - Preface: index.md
   - I Foundations:
